--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "i18next": "^25.5.3",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-i18next": "^15.4.2",
