--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "postbuild": "next-sitemap",
     "dev": "next dev -p 4000 --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
