--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "next-i18next": "^15.4.2",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.16.3",
     "postprocessing": "^6.37.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -44,6 +46,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "9.37.0",
